name:                antiquoter
version:             0.1.0.0
synopsis:            Combinator library for working with quasiquoters and constructing antiquoters.
-- description:

license:             BSD3
license-file:        LICENSE

author:              Lars Corbijn
maintainer:          aspergesoepje@gmail.com

-- copyright:

category:            Language
build-type:          Simple

cabal-version:       >=1.8


library
  exposed-modules:
    Language.Haskell.Antiquoter
  other-modules:
  build-depends:
    base >=4 && <5,
    -- could later be lowered
    template-haskell >= 2.5,
    -- bounds to be added
    syb
  hs-source-dirs: src
  ghc-options: -Wall
