name:                antiquoter
version:             0.1.0.0
synopsis:            Combinator library for quasi- and anti-quoting
-- description:

license:             BSD3
license-file:        LICENSE

author:              Lars Corbijn
maintainer:          aspergesoepje@gmail.com

-- copyright:

category:            Language
build-type:          Simple

cabal-version:       >=1.8


library
  exposed-modules:
    Language.Haskell.AntiQuoter
    Language.Haskell.AntiQuoter.Base
    Language.Haskell.AntiQuoter.Combinators
  other-modules:
  build-depends:
    base >=4 && <5,
    -- could later be lowered
    template-haskell >= 2.5,
    -- bounds to be added
    syb
  hs-source-dirs: src
  ghc-options: -Wall
